# TeamPlutoEI

./: JoyTeleop.py  Launch.py  README.md  SpeedController.py  Twist2Pic.py  my_line_library.py  vp_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
myworkspace/install/: local_setup.sh  setup.sh
myworkspace/launch/: drone_control.launch.py
myworkspace/log/: latest_build
myworkspace/src/advanced_behaviors/: setup.cfg  setup.py
myworkspace/src/low_level_control/: package.xml  setup.cfg  setup.py
myworkspace/src/teleop/: package.xml  setup.py
ros2_packages/behavior/: package.xml  setup.py
ros2_packages/behavior/behavior/: auto_off.py  base_behavior.py  behaviors.py  command.py  joy_teleop.py  joy_teleop_old.py  status_viewer.py
ros2_packages/behavior/launch/: robot_launch.xml
ros2_packages/behavior/test/: test_copyright.py
ros2_packages/behavior_interface/: CMakeLists.txt  package.xml  setup.py
ros2_packages/lower_level/: package.xml
ros2_packages/vanishing/: package.xml  setup.cfg  setup.py
ros2_packages/vanishing/launch/: vanishing_launch.xml
ros2_packages/vanishing/vanishing/: controller.py  my_line_library.py  shift_node.py  speed_controller.py  test_on_image.py  vp_node.py
ros2_packages/vanishing_point/: vp_node.py
ros2_packages/vanishing_turtlebot/: package.xml  setup.cfg  setup.py
src/lower_level/: package.xml  setup.cfg  setup.py
twist2pic/: package.xml  setup.cfg  setup.py
twist2pic/launch/: twist2piclaunch.py
twist2pic/twist2pic/: twist2pic.py
(+48 files in other folders)
